# GymPal

./: .gitignore  LICENSE
fitness-agent/: .env.example  .gitignore  HELP.md  package.json
fitness-agent/agent/: pyproject.toml
fitness-agent/agent/app/: agents.py  config.py  flow_log.py  llm.py  main.py  models.py  session_store.py  tool_gateway.py
fitness-agent/agent/tests/: test_agent_quality_gates.py  test_agent_runtime_contracts.py  test_remediation_phase6.py
fitness-agent/backend/: package.json  tsconfig.build.json  tsconfig.json
fitness-agent/backend/prisma/: schema.prisma
fitness-agent/backend/src/: app.module.ts  main.ts
fitness-agent/backend/test/: agent-actions.test.ts  agent-contract.test.ts  agent-policy.test.ts  memory-contract.test.ts  phase1.test.ts  phase2-e2e.test.ts  phase3-memory.test.ts  phase3-outcome.test.ts  phase3-strategy.test.ts  phase4-product-events.test.ts  phase4-quality.test.ts  phase4-revision.test.ts  phase4-work-items.test.ts  phase6-eval-gates.test.ts  source-hygiene.test.ts
fitness-agent/docs/evals/: remediation-golden-conversations.json
fitness-agent/evals/: agent-golden-conversations.json
fitness-agent/frontend/: package.json
fitness-agent/frontend/app/: globals.css
fitness-agent/frontend/components/: activity-rings.tsx  cards.tsx  coach-workspace-panel.tsx  dashboard-activity-rings.tsx  dashboard-coaching-panel.tsx  dashboard-diet-plate-manager.tsx  diet-plate-card.tsx  diet-recommendation-modal.tsx  manual-context-panel.tsx  profile-editor.tsx  profile-workout-logger.tsx
fitness-agent/frontend/lib/: api.ts  (+4 more)
(+38 files in other folders)
